# ece454

./: .gitignore  lab1.data
ECE454-Lab2/: CMakeLists.txt  implementation.c  lab1.txt
ece454-lab3/src/: mm.c  test.c
lab4/: Makefile  hash.h  list.h  randtrack.cc  randtrack_element_lock.cc  randtrack_global_lock.cc  randtrack_list_lock.cc  randtrack_reduction.cc  randtrack_tm.cc  report.txt
lab5/: Makefile  Makefile.include  gol  initboard  life.c  life.h  neighbours.c  neighbours.h  teamInfo.txt
lab5/inputs/: 32.pbm
